<resources>
    <string name="app_name">MoocCar</string>
    <string name="splash_title">打车出行</string>
    <string name="splash_message">美好一天，平安出行 </string>
    <string name="pls_input_phone">请输入手机号码</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="sms_code_input">输入验证码</string>
    <string name="sms_code_send_phone">验证码已经发送至%s</string>
    <string name="resend">重新发送</string>
    <string name="after_time_resend">%d秒后重新发送</string>
    <string name="create_pw">创建秘密</string>
    <string name="pls_input_pw">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="pls_input_pw_again">请再次输入密码</string>
    <string name="input_pw">输入密码</string>
    <string name="sending">正在向%s发送短信验证码</string>
    <string name="sms_code_error">验证码错误</string>
    <string name="register_suc_and_loging">注册成功，正在为您自动登录</string>
    <string name="user_exist">用户已经存在</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_is_not_equal">两次输入的密码不一样</string>
    <string name="error_server"> 服务器繁忙 </string>
    <string name="modify_pw">修改密码</string>
    <string name="check_user">正在检查用户</string>
    <string name="register">注册</string>
    <string name="login_suc">登录成功</string>
    <string name="password_error">密码错误</string>
    <string name="sms_send_fail">服务器异常，验证码未发送成功</string>
    <string name="token_invalid">登录过期</string>
</resources>
